# hydromt_uwbm

./: .gitignore  README.md  README.rst  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  documentation_improvement.yaml  feature_request.yaml
.github/workflows/: docs.yml  tests.yml
docs/: _quarto.yml  references.bib
docs/contributing/: index.qmd
docs/getting_started/: index.qmd  installation.qmd
docs/user_guide/: index.qmd  uwbm.qmd
hydromt_plugin_uwbm/: __init__.py  uwbm.py
hydromt_plugin_uwbm/data/: parameters_data.yml  project_area.yml
hydromt_plugin_uwbm/data/geoms/: project_area_New_Orleans.shp  project_area_New_Orleans.shx
hydromt_plugin_uwbm/data/landuse/: osm_mapping.csv
hydromt_plugin_uwbm/workflows/: __init__.py  forcing(old).py  forcing.py  landuse(old).py  landuse.py
hydromt_uwbm/: __init__.py  uwbm.py
hydromt_uwbm/workflows/: landuse.py
tests/: conftest.py  test_uwbm.py  test_uwbm_methods.py
